# simple-starlette

./: .gitignore  README.md  app.py  exceptions.py  pyproject.toml
api/: __init__.py  rest.py  routes.py  views.py
schema/: graphql.py  routes.py
server/: config.py
settings/: config.py
