[tool.poetry]
name = "simple-starlette"
version = "0.1.0"
description = ""
authors = ["SungminSo <soos196@hanyang.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
